--- a/src/app/page/perfil/perfil.component.html
+++ b/src/app/page/perfil/perfil.component.html
@@ -5,7 +5,7 @@
     <h2 class="flex-grow text-center text-2xl md:text-4xl font-bold text-[#1F2D3D]">
       Bienvenido a PuntoSafa
     </h2>
-    <h1 class="text-lg font-semibold text-blue-600 mr-10">¡HOLA! {{ userData?.nombre }}</h1>
+    <h1 class="text-2xl md:text-3xl font-bold text-blue-600 mr-10">¡HOLA! {{ userData?.nombre }}</h1>
   </header>
 
   <!-- Main Content -->
@@ -45,10 +45,19 @@
           <p><strong class="text-gray-600">Contraseña:</strong> ••••••••••</p>
         </div>
 
-        <button (click)="abrirFormulario()" class="mt-4 bg-blue-500 text-white px-4 py-2 rounded">
-          Editar Perfil
-        </button>
+        <!-- Botones más grandes y separados -->
+        <div class="mt-6 flex gap-6">
+          <button (click)="abrirFormulario()" class="bg-blue-500 text-white text-lg px-6 py-3 rounded shadow-md">
+            Editar Perfil
+          </button>
+
+          <button (click)="abrirEdicionUsuario()" class="bg-blue-500 text-white text-lg px-6 py-3 rounded shadow-md">
+            Editar Contraseña
+          </button>
+        </div>
       </div>
+
+
 
       <!-- Modal / Formulario de Edición -->
       <div *ngIf="mostrandoFormulario" class="fixed inset-0 bg-gray-900 bg-opacity-50 flex justify-center items-center">
@@ -74,11 +83,6 @@
           <label>Foto:</label>
           <input [(ngModel)]="usuarioEditado.foto" class="w-full border p-2 rounded" />
 
-          <label>Contraseña:</label>
-          <input type="password" [(ngModel)]="usuarioEditado.contrasena" class="w-full border p-2 rounded"
-                 placeholder="Nueva contraseña (opcional)" />
-
-
 
           <div class="flex justify-end mt-4">
             <button (click)="guardarCambios()" class="bg-green-500 text-white px-4 py-2 rounded mr-2">
@@ -87,6 +91,26 @@
 
             <button (click)="cerrarFormulario()" class="bg-red-500 text-white px-4 py-2 rounded">Cancelar</button>
           </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <!-- Modal para editar email y contraseña -->
+    <div *ngIf="mostrandoEdicionContrasena" class="fixed inset-0 bg-gray-900 bg-opacity-50 flex justify-center items-center">
+      <div class="bg-white p-6 rounded shadow-lg w-1/3">
+        <h2 class="text-lg font-semibold mb-4">Editar Email y Contraseña</h2>
+
+        <label>Contraseña:</label>
+        <input type="password" [(ngModel)]="usuarioEditado.contrasena" class="w-full border p-2 rounded"
+               placeholder="Nueva contraseña (opcional)" />
+
+        <div class="flex justify-end mt-4">
+          <button (click)="guardarEdicionContrasena()" class="bg-green-500 text-white px-4 py-2 rounded mr-2">
+            Guardar
+          </button>
+          <button (click)="cerrarEdicionUsuario()" class="bg-red-500 text-white px-4 py-2 rounded">Cancelar</button>
         </div>
       </div>
     </div>
