--- a/src/app/page/pagar-compra/pagar-compra.component.html
+++ b/src/app/page/pagar-compra/pagar-compra.component.html
@@ -6,11 +6,11 @@
         <div *ngFor="let item of cartItems"  class="space-y-4 mt-8">
           <div class="flex items-center gap-4">
             <div class="w-24 h-24 shrink-0 bg-white p-2 rounded-md">
-              <img [src]="item.image" class="w-full h-full object-contain"  alt="Imagen producto"/>
+              <img [src]="item.imagen" class="w-full h-full object-contain"  alt="Imagen producto"/>
             </div>
 
             <div class="w-full">
-              <h3 class="text-base font-semibold text-gray-800">{{ item.name }}</h3>
+              <h3 class="text-base font-semibold text-gray-800">{{ item.titulo }}</h3>
               <h6 class="text-sm text-gray-800 font-bold cursor-pointer mt-0.5">{{ item.price | currency }}</h6>
 
               <div class="flex gap-4 mt-4">
