Actualizado atributo name e image a titulo e imagen

--- a/src/app/component/carrito-compra/carrito-compra.component.html
+++ b/src/app/component/carrito-compra/carrito-compra.component.html
@@ -24,7 +24,7 @@
       <div>
         <div class="flex justify-between text-base font-medium text-gray-900">
           <h3>
-            <a href="#">{{ item.titulo }}</a>
+            <a href="http://localhost:4200/detalle-libro/{{item.id}}">{{ item.name }}</a>
           </h3>
           <p class="ml-4">{{ item.precio | currency: 'EUR' }}</p>
         </div>
