--- a/src/app/page/pedidos-cliente/pedidos-cliente.component.html
+++ b/src/app/page/pedidos-cliente/pedidos-cliente.component.html
@@ -18,7 +18,7 @@
     </div>
 
 
-    <div *ngIf="orderStats" class="flex justify-center items-center">
+    <div *ngIf="orderStats" class="mt-12 flex justify-center items-center">
     <div class="flex flex-col md:flex-row md:space-x-4">
     <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 hover:border-gray-900 transition">
       <svg class="h-8 w-8 text-sky-500"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round">  <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z" />  <polyline points="3.27 6.96 12 12.01 20.73 6.96" />  <line x1="12" y1="22.08" x2="12" y2="12" /></svg>
@@ -33,7 +33,7 @@
       <a href="#">
         <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Pedidos procesados</h5>
       </a>
-      <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">23</p>
+      <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">{{orderStats.procesados}}</p>
     </div>
 
     <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 hover:border-gray-900 transition">
@@ -41,7 +41,7 @@
       <a href="#">
         <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Pedidos entregados</h5>
       </a>
-      <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">23</p>
+      <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">{{orderStats.entregados}}</p>
     </div>
   </div>
   </div>
@@ -50,7 +50,7 @@
 
     </div>
 
-    <div *ngIf="errorMessage">{{ errorMessage }}</div>
+    <div *ngIf="errorMessage" class="mt-8"><a routerLink="/login">{{ errorMessage }}</a></div>
     <div *ngFor="let pedido of pedidos" class="border-4 border-custom-blue mt-20 main-box rounded-xl pt-6 max-w-xl max-lg:mx-auto lg:max-w-full">
       <div *ngFor="let linea of pedido.lineaPedidos">
 <!--              <pre>{{ pedido | json }}</pre>-->
@@ -58,9 +58,15 @@
         <div
         class="flex flex-col lg:flex-row lg:items-center justify-between px-6 pb-6 border-b border-gray-200">
         <div class="data">
-          <p class="font-semibold text-base leading-7 text-black mt-4">Fecha del pedido: <span class="text-gray-400 font-medium">
-                            {{pedido.fecha | date: 'dd/MM/yyyy'}}</span></p>
+          <p class="font-semibold text-base leading-7 text-black mt-4">Pedido: <span class="text-gray-400 font-medium">
+                            {{pedido.codigo}}</span></p>
+
         </div>
+          <div class="data">
+            <p class="font-semibold text-base leading-7 text-black mt-4">Fecha del pedido: <span class="text-gray-400 font-medium">
+                            {{pedido.fecha | date: 'dd/MM/yyyy'}}</span></p>
+
+          </div>
       </div>
 
 
