--- a/src/app/page/pedidos-cliente/pedidos-cliente.component.html
+++ b/src/app/page/pedidos-cliente/pedidos-cliente.component.html
@@ -1,21 +1,8 @@
 <section class="py-24 relative">
   <div class="w-full max-w-7xl px-4 md:px-5 lg-6 mx-auto">
-    <div class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32">
-      <div class="absolute inset-0 bg-gradient-to-b from-black via-transparent to-black opacity-75"></div>
-      <img src="https://www.mundodeportivo.com/urbantecno/hero/2022/07/Venta-de-libros.png?width=768&aspect_ratio=16:9&format=nowebp" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover object-right md:object-center">
-      <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-        <div class="aspect-[1097/845] w-[68.5625rem] bg-gray-700  opacity-20"></div>
-      </div>
-      <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-        <div class="aspect-[1097/845] w-[68.5625rem] bg-gray-700 opacity-20"></div>
-      </div>
-      <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div class="mx-auto max-w-2xl lg:mx-0">
-          <h2 class="font-bold text-4xl leading-10 text-center tracking-tight text-white sm:text-6xl">Mis pedidos</h2>
-          <!--      <p class="mt-6 text-lg leading-8 text-gray-300">Mis pedidos</p>-->
-        </div>
-      </div>
-    </div>
+    <h2 class="font-bold text-4xl leading-10 text-center tracking-tight text-black sm:text-6xl">Mis pedidos</h2>
+    <p class="mt-6 text-lg text-center leading-8 text-gray-600">Aquí puedes consultar tus pedidos</p>
+
 
 
     <div *ngIf="orderStats" class="mt-12 flex justify-center items-center">
@@ -25,7 +12,7 @@
       <a href="#">
         <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Pedidos realizados</h5>
       </a>
-      <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">{{orderStats.totales}}</p>
+      <p class="mb-3 text-3xl text-gray-500 dark:text-gray-400">{{totales}}</p>
     </div>
 
     <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 hover:border-gray-900 transition">
@@ -33,7 +20,7 @@
       <a href="#">
         <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Pedidos procesados</h5>
       </a>
-      <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">{{orderStats.procesados}}</p>
+      <p class="mb-3 text-3xl text-gray-500 dark:text-gray-400">{{procesados}}</p>
     </div>
 
     <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 hover:border-gray-900 transition">
@@ -41,7 +28,7 @@
       <a href="#">
         <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Pedidos entregados</h5>
       </a>
-      <p class="mb-3 font-normal text-gray-500 dark:text-gray-400">{{orderStats.entregados}}</p>
+      <p class="mb-3 text-3xl text-gray-500 dark:text-gray-400">{{entregados}}</p>
     </div>
   </div>
   </div>
