Mejoras colocando un podio en los libros recomedados.

--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -21,7 +21,7 @@
           <p class="text-white text-lg font-semibold">{{ libro.precio }} €</p>
           <button
             (click)="verDetallesLibro(libro.id)"
-            class="mt-4 px-4 py-2 bg-blue-900 text-white rounded hover:bg-blue-700"
+            class="px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg"
           >
             Ver detalles
           </button>
