Añadido en footer.

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -14,10 +14,12 @@
         <ul class="text-center md:text-left">
           <li><a href="#" class="text-white hover:underline">Sobre nosotros</a></li>
           <li><a href="#" class="text-white hover:underline">Contacto</a></li>
+          <li><a href="#" class="text-white hover:underline">Políticas de privacidad</a></li>
+
         </ul>
         <ul class="text-center md:text-left">
           <li><a href="#" class="text-white hover:underline">Aviso legal</a></li>
-          <li><a href="#" class="text-white hover:underline">Políticas de privacidad</a></li>
+          <li><a href="#" class="text-white hover:underline">Políticas de cookies</a></li>
           <li><a href="#" class="text-white hover:underline">Términos de uso</a></li>
         </ul>
       </div>
