--- a/src/app/component/Inicio_componentes_propios/recomendacion-libro/recomendacion-libro.component.html
+++ b/src/app/component/Inicio_componentes_propios/recomendacion-libro/recomendacion-libro.component.html
@@ -54,7 +54,7 @@
         <div class="md:w-1/2 relative h-56 md:h-auto overflow-hidden group">
           <img [src]="libros[2].imagen" alt="{{ libros[2].titulo }}" class="object-cover w-full h-full md:rounded-l-lg md:rounded-t-none">
           <div class="absolute inset-0 bg-black bg-opacity-75 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-            <button (click)="verDetallesLibro(libros[2].id)" class="px-5 py-2.5 bg-blue-900 text-white font-medium rounded-lg hover:bg-blue-700 transition shadow-lg">
+            <button (click)="verDetallesLibro(libros[2].id)" class="mt-6 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg shadow-gray-500">
               Ver detalles
             </button>
           </div>
