Añadido currency EUR

--- a/src/app/component/carrito-compra/carrito-compra.component.html
+++ b/src/app/component/carrito-compra/carrito-compra.component.html
@@ -26,11 +26,11 @@
           <h3>
             <a href="http://localhost:4200/detalle-libro/{{item.id}}">{{ item.titulo }}</a>
           </h3>
-          <p class="ml-4">{{ item.price | currency: 'EUR' }}</p>
+          <p class="ml-4">{{ item.precio | currency: 'EUR' }}</p>
         </div>
       <div class="quantity-controls">
         <button (click)="decreaseQuantity(item)" class="bg-customGreen text-gray-700 px-3 py-1 rounded-l-md hover:bg-gray-300">-</button>
-        <span class="bg-blue-800">{{ item.quantity }}</span>
+        <span class="bg-blue-800">{{ item.cantidad }}</span>
         <button (click)="increaseQuantity(item)" class="bg-customAzulito text-gray-700 px-3 py-1 rounded-r-md hover:bg-gray-300">+</button>
       </div>
         <div class="flex flex-1 items-end justify-between text-sm">
