se creo envio de correo y autenticacionde email

--- a/src/app/page/perfil-adm/perfil-adm.component.html
+++ b/src/app/page/perfil-adm/perfil-adm.component.html
@@ -69,6 +69,13 @@
       </div>
     </div>
 
+    <!-- Botón para escribir email -->
+    <div class="mt-8">
+      <a routerLink="/email" class="bg-blue-500 text-white px-6 py-3 rounded-full inline-block text-center font-semibold">
+        Escribir Email
+      </a>
+    </div>
+
     <!-- Información del Carrito de Compras -->
     <div class="mt-8 bg-gray-100 p-4 rounded-lg shadow-md">
       <h2 class="text-lg font-semibold text-gray-700 mb-2">Estado de Clientes</h2>
