--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -3,7 +3,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <div class="container mx-auto flex flex-col md:flex-row items-centerpx-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
       <div class="mt-10 md:mt-0 md:ml-0 lg:ml-0">
-        <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
+        <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
       </div>
 
       <div class="flex items-center justify-center text-center md:text-left max-w-2xl lg:max-w-xl mx-auto">
