correcion del registro para q este aliniado

--- a/src/app/page/perfil-adm/perfil-adm.component.html
+++ b/src/app/page/perfil-adm/perfil-adm.component.html
@@ -76,6 +76,13 @@
       </a>
     </div>
 
+    <!-- Botón para registro Libro -->
+    <div class="mt-8">
+      <a routerLink="/registro-libro" class="bg-blue-500 text-white px-6 py-3 rounded-full inline-block text-center font-semibold">
+        Registro Libro
+      </a>
+    </div>
+
     <!-- Información del Carrito de Compras -->
     <div class="mt-8 bg-gray-100 p-4 rounded-lg shadow-md">
       <h2 class="text-lg font-semibold text-gray-700 mb-2">Estado de Clientes</h2>
